3rdParty/boost/1.78.0/libs/describe/doc/describe/examples.adoc
////
Copyright 2020 Peter Dimov
Distributed under the Boost Software License, Version 1.0.
https://www.boost.org/LICENSE_1_0.txt
////

[#examples]
# Usage Examples
:idprefix: example_

[#example_printing_enums_ct]
## Printing Enumerators with a Compile Time Loop

A simple example that just iterates over the enumerator
descriptors using `mp11::mp_for_each` and prints them.

[source]
----
include::../../example/printing_enums_ct.cpp[lines=5..-1]
----

[#example_printing_enums_rt]
## Printing Enumerators with a Run Time Loop

This is similar to the previous example, but it first builds a
`std::array` with the values, and then iterates over it using
an ordinary `for` loop, instead of `mp_for_each`.

[source]
----
include::../../example/printing_enums_rt.cpp[lines=5..-1]
----

[#example_enum_to_string]
## enum_to_string

This example shows a function that, given an enumerator
value, returns its name. If the value does not correspond
to a named value, the function returns `"(unnamed)"`.

[source]
----
include::../../example/enum_to_string.cpp[lines=5..-1]
----

Since release 1.78.0, the library provides `enum_to_string`.
It differs from the one in the example by having a second
parameter that determines what should be returned when the
value doesn't correspond to a named enumerator.

[#example_string_to_enum]
## string_to_enum

The opposite of the previous example; returns an enumerator
value when given the enumerator name. When the string passed
does not correspond to any enumerator name, throws an exception.

[source]
----
include::../../example/string_to_enum.cpp[lines=5..-1]
----

Since release 1.78.0, the library provides `enum_from_string`.
It differs from the function in the example by signaling failure
by a `bool` return value instead of using exceptions. The
enumerator value is assigned to the output argument.

[#example_print_function]
## Defining a Universal Print Function

This example defines a universal `operator<<` that works on
any class or struct type that has been described with
`BOOST_DESCRIBE_STRUCT` or `BOOST_DESCRIBE_CLASS`.

It first prints the base classes, recursively, then prints
all the members.

(A C cast is used to access private base classes. This is
not as bad as it first appears, because we're only inspecting
the base class by printing its members, and doing so should not
change its state and hence cannot violate its invariant.)

[source]
----
include::../../example/print_function.cpp[lines=5..-1]
----

Since release 1.78.0, this universal `operator<<` is supplied
by the library, in the `boost::describe::operators` namespace.
It's enabled by means of a using declaration in the namespace
containing the described application types, like in the example
below:
```
namespace app
{

struct X
{
    int a = 1;
};

BOOST_DESCRIBE_STRUCT(X, (), (a))

using boost::describe::operators::operator<<;

}
```

[#example_hash_value]
## Implementing hash_value

This example defines a universal `hash_value` overload that
computes the hash value of an annotated struct or class. It
does so by iterating over the described bases and members and
calling `boost::hash_combine` on each.

The overload is defined in namespace `app` in order to apply
to all annotated classes also defined in `app`.

[source]
----
include::../../example/hash_value.cpp[lines=5..-1]
----

[#example_equality]
## Implementing operator==

This example defines a universal `operator==` overload that
iterates over the described bases and members and compares
them for equality using `==`.

The overload is defined in namespace `app` in order to apply
to all annotated classes also defined in `app`.

[source]
----
include::../../example/equality.cpp[lines=5..-1]
----

Since release 1.78.0, this universal `operator==` is supplied
by the library, in the `boost::describe::operators` namespace.
It's enabled by means of a using declaration in the namespace
containing the described application types, like in the example
below:
```
namespace app
{

struct X
{
    int a = 1;
};

BOOST_DESCRIBE_STRUCT(X, (), (a))

using boost::describe::operators::operator==;

}
```

The rest of the relational operators are also provided and can
be enabled similarly.

[#example_struct_to_tuple]
## struct_to_tuple

This example defines a function `struct_to_tuple` that takes
a described class type as an argument and returns a tuple of
all its public members.

[source]
----
include::../../example/struct_to_tuple.cpp[lines=5..-1]
----

[#example_to_json]
## Automatic Conversion to JSON

This example defines a universal `tag_invoke` overload that
automatically converts an annotated struct to a
http://boost.org/libs/json[Boost.JSON] value by iterating
over the described public members and adding them to the return
`boost::json::object`.

The overload is defined in namespace `app` in order to apply
to all annotated classes also defined in `app`.

The presence of private members is taken as an indication that
a universal conversion is not suitable, so the overload is
disabled in this case using `std::enable_if_t`.

[source]
----
include::../../example/to_json.cpp[lines=5..-1]
----

[#example_from_json]
## Automatic Conversion from JSON

Like the previous example, but in the other direction. Defines
a `tag_invoke` overload that converts a `boost::json::value` to
an annotated struct.

[source]
----
include::../../example/from_json.cpp[lines=5..-1]
----

[#example_serialization]
## Automatic Serialization

This example defines a universal `serialize` function that
automatically adds https://boost.org/libs/serialization[Boost.Serialization]
support to annotated classes.

[source]
----
include::../../example/serialization.cpp[lines=5..-1]
----

[#example_json_rpc]
## Automatic JSON RPC

This example defines a generic `call` function that can be used to
invoke a member function by name, with the arguments passed in a
http://boost.org/libs/json[Boost.JSON] array. The result is returned
in a `boost::json::value`.

[source]
----
include::../../example/json_rpc.cpp[lines=5..-1]
----

[#example_console]
## Interactive Variable Console

This example implements an interactive console that allows printing
and modifying variables. It uses http://boost.org/libs/json[Boost.JSON]
for converting the variables to and from a string form.

[source]
----
include::../../example/console.cpp[lines=9..-1]
----
